update to latest littlekt snapshot